--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "eslint": "7.14.0",
     "jest": "26.6.3",
     "rollup": "2.42.4",
-    "sinon": "9.2.4"
+    "rollup-plugin-terser": "7.0.2",
+    "sinon": "9.2.4",
+    "terser": "5.6.1"
   },
   "dependencies": {},
   "license": "MIT",
